--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "regenerator-runtime": "^0.12.1",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
   },
